# sree

./: .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PERFORMANCE.md  QUICK_REFERENCE.md  README.md  SECURITY.md  TROUBLESHOOTING.md
.github/workflows/: release.yml
examples/: README.md  basic_chat.md  code_refactoring.md  debugging_session.md  file_operations.md  project_analysis.md
examples/config_examples/: README.md  developer.toml  light_theme.toml  minimal.toml  performance.toml  power_user.toml
src/: app.rs  lib.rs  logging.rs  main.rs  message.rs
src/agent/: loop.rs  mod.rs
src/commands/: handlers.rs  mod.rs
src/config/: mod.rs  settings.rs  theme.rs
src/context/: conversation.rs  files.rs  mod.rs  system.rs
src/llm/: client.rs  messages.rs  mod.rs  models.rs  streaming.rs  token_counter.rs
src/tools/: bash.rs  executor.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  mod.rs  registry.rs  web_search.rs
src/ui/: chat_view.rs  header.rs  input.rs  layout.rs  markdown.rs  mod.rs  status_bar.rs  syntax.rs  theme.rs
src/ui/widgets/: diff_view.rs  file_tree.rs  mod.rs  spinner.rs  tool_call.rs
tests/: cli_tests.rs  command_tests.rs  config_tests.rs  context_tests.rs  edge_case_tests.rs  history_tests.rs  integration_tests.rs  llm_tests.rs  logging_tests.rs  markdown_tests.rs  message_tests.rs  performance_tests.rs  spinner_tests.rs  theme_tests.rs  tool_tests.rs  ui_components_tests.rs
