[package]
name = "sree"
version = "0.1.0"
edition = "2021"

[lib]
name = "sree"
path = "src/lib.rs"

[[bin]]
name = "sree"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.7"

# HTTP client (still needed for tools)
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"

# AWS SDK for Bedrock (versions compatible with Rust 1.89)
aws-config = "1.1.7"
aws-sdk-bedrockruntime = "1.50"
aws-smithy-types = "1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Syntax highlighting
syntect = "5.2"
pulldown-cmark = "0.12"

# File operations
ignore = "0.4"
glob = "0.3"
regex = "1.11"

# Config
dirs = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async trait
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.13"
